Added circleci config